fixing img on btn not deteting finger input (on mobile)

--- a/style.css
+++ b/style.css
@@ -84,10 +84,7 @@ button:hover {
 svg {
   height: cover;
 }
-button img {
-  pointer-events: none;
-  
-}
+
 .result {
   font-family: montserrat;
   width: 80%;
